[gd_scene load_steps=18 format=3 uid="uid://bl8dkve10fma8"]

[ext_resource type="PackedScene" uid="uid://c32muahqn1k4q" path="res://scenes/map/map.tscn" id="1_8rlou"]
[ext_resource type="Script" uid="uid://bm7k805xh1o2a" path="res://scenes/run/run.gd" id="1_l7o68"]
[ext_resource type="Resource" uid="uid://br2s55y88y5ux" path="res://scenes/run/run_startup.tres" id="2_wdonh"]
[ext_resource type="PackedScene" uid="uid://d0sv3khv88a0s" path="res://scenes/ui/card_pile_opener.tscn" id="4_0tt4g"]
[ext_resource type="Texture2D" uid="uid://do0ydx76pjy6i" path="res://art/dottedline.png" id="4_g42ja"]
[ext_resource type="PackedScene" uid="uid://kh5x4d2lti7e" path="res://scenes/ui/health_ui.tscn" id="4_ux63y"]
[ext_resource type="PackedScene" uid="uid://c3kq1lyhjn7ng" path="res://scenes/ui/gold_ui.tscn" id="4_wo0nw"]
[ext_resource type="Texture2D" uid="uid://isan6btj7dwy" path="res://art/tile_0091.png" id="6_ux63y"]
[ext_resource type="PackedScene" uid="uid://dg8q0cun8yy4s" path="res://scenes/ui/party_selector.tscn" id="6_yeia0"]
[ext_resource type="PackedScene" uid="uid://b6tvvkilj7pgd" path="res://scenes/ui/item_inventory_ui.tscn" id="7_cnkn7"]
[ext_resource type="PackedScene" uid="uid://gfvm2mvp7prq" path="res://scenes/ui/card_pile_view.tscn" id="7_yeia0"]
[ext_resource type="PackedScene" uid="uid://clj4o618fkspv" path="res://scenes/ui/universal_hover_tooltip.tscn" id="10_yeia0"]

[sub_resource type="Gradient" id="Gradient_cnkn7"]
offsets = PackedFloat32Array(0, 0.218182, 0.50303, 0.80303, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.823, 1, 1, 1, 0.906, 1, 1, 1, 0.845, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_g42ja"]
gradient = SubResource("Gradient_cnkn7")

[sub_resource type="Curve" id="Curve_fo0ly"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.227528, 0.871003), 0.0, 0.0, 0, 0, Vector2(0.494382, 1), 0.0, 0.0, 0, 0, Vector2(0.803371, 0.871003), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_cnkn7"]
curve = SubResource("Curve_fo0ly")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l6p45"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(256, 124, 1)
direction = Vector3(1, 1, 0)
spread = 180.0
flatness = 1.0
initial_velocity_min = 7.61
initial_velocity_max = 38.07
angular_velocity_min = 102.33
angular_velocity_max = 197.36
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.6
scale_curve = SubResource("CurveTexture_cnkn7")
color_ramp = SubResource("GradientTexture1D_g42ja")

[node name="Run" type="Node"]
process_mode = 3
script = ExtResource("1_l7o68")
run_startup = ExtResource("2_wdonh")

[node name="Map" parent="." instance=ExtResource("1_8rlou")]

[node name="Particles" type="CanvasLayer" parent="Map"]
unique_name_in_owner = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="Map/Particles"]
position = Vector2(260, 153)
amount = 6
texture = ExtResource("4_g42ja")
lifetime = 2.0
preprocess = 10.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_l6p45")

[node name="CurrentView" type="Node" parent="."]

[node name="DebugButtons" type="VBoxContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
alignment = 1

[node name="MapButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "map"

[node name="BattleButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "battle"

[node name="ShopButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "shop"

[node name="TreasureButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "treasure"

[node name="RewardsButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "rewards"

[node name="PokecenterButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "pokecenter"

[node name="AddItemButton" type="Button" parent="DebugButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "add item"

[node name="TopBar" type="CanvasLayer" parent="."]
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 36)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.501961)

[node name="BarItems" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 36)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
alignment = 1

[node name="HealthUI" parent="TopBar/BarItems" instance=ExtResource("4_ux63y")]
unique_name_in_owner = true
visible = false
layout_mode = 2
show_max_hp = true

[node name="GoldUI" parent="TopBar/BarItems" instance=ExtResource("4_wo0nw")]
unique_name_in_owner = true
layout_mode = 2

[node name="Placeholder3" type="Control" parent="TopBar/BarItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemInventoryUI" parent="TopBar/BarItems" instance=ExtResource("7_cnkn7")]
unique_name_in_owner = true
layout_mode = 2

[node name="Placeholder2" type="Control" parent="TopBar/BarItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PartySelector" parent="TopBar/BarItems" instance=ExtResource("6_yeia0")]
unique_name_in_owner = true
layout_mode = 2
alignment = 0

[node name="Placeholder" type="Control" parent="TopBar/BarItems"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeckButton" parent="TopBar/BarItems" node_paths=PackedStringArray("counter") instance=ExtResource("4_0tt4g")]
unique_name_in_owner = true
layout_mode = 2
texture_hover = ExtResource("6_ux63y")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="TopBar/BarItems/DeckButton"]
layout_mode = 0
offset_left = 8.0
offset_right = 24.0
offset_bottom = 9.0
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeckView" parent="TopBar" instance=ExtResource("7_yeia0")]
unique_name_in_owner = true
visible = false

[node name="EvolutionRewardsUI" type="CanvasLayer" parent="."]
layer = 5

[node name="SceneTransition" type="CanvasLayer" parent="."]
layer = 6

[node name="Fade" type="ColorRect" parent="SceneTransition"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="UniversalHoverTooltip" parent="SceneTransition" instance=ExtResource("10_yeia0")]
visible = false
